--- a/src/app.html
+++ b/src/app.html
@@ -157,24 +157,15 @@
         </script>
         <div id="svelte">%sveltekit.body%</div>
         <div class="page-loader">
-            <div class="animation">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="content">
+                <img
+                    src="/console/logos/appwrite-icon.svg"
+                    width="40"
+                    height="40"
+                    class="logo-dark"
+                    alt="Appwrite Logo" />
+                <span class="message">Loading Cloud...</span>
             </div>
-            <img
-                src="/console/images/appwrite-logo-light.svg"
-                width="120"
-                height="22"
-                class="logo-light"
-                alt="Appwrite Logo" />
-            <img
-                src="/console/images/appwrite-logo-dark.svg"
-                width="120"
-                height="22"
-                class="logo-dark"
-                alt="Appwrite Logo" />
         </div>
     </body>
 </html>
