--- a/src/app.html
+++ b/src/app.html
@@ -5,10 +5,8 @@
         <meta
             name="description"
             content="Appwrite is an open-source platform for building applications at any scale, using your preferred programming languages and tools." />
-
         <link rel="icon" type="image/svg+xml" href="/console/logos/appwrite-icon.svg" />
         <link rel="mask-icon" type="image/png" href="/console/logos/appwrite-icon.png" />
-
         <link
             rel="preload"
             href="/console/fonts/inter/inter-v8-latin-600.woff2"
@@ -129,9 +127,9 @@
             as="font"
             type="font/woff2"
             crossorigin />
+        <link rel="preload" as="style" type="text/css" href="/console/fonts/cloud.css" />
         <link rel="preload" as="style" type="text/css" href="/console/fonts/main.css" />
         <link rel="stylesheet" href="/console/css/loading.css" />
-        <link rel="stylesheet" href="/console/fonts/main.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         %sveltekit.head%
     </head>
